fixed drum piano overlapping

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -69,8 +69,9 @@
 .drums {
   display: none;
   margin: 9px -50px;
-  float: right;
   width: 400px;
+  padding-top: 10vw;
+  padding-left: 41vw;
 }
 
 #snare {
